--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "express": "^4.15.4",
     "express-sessions": "latest",
     "fullcalendar": "^3.7.0",
-    "gulp": "^3.9.1",
-    "gulp-jshint": "^2.0.4",
-    "gulp-livereload": "^3.8.1",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-watch": "^4.3.11",
+    "gulp": "latest",
+    "gulp-jshint": "latest",
+    "gulp-livereload": "latest",
+    "gulp-nodemon": "latest",
+    "gulp-watch": "latest",
     "jsbn": "^0.1.0",
     "jshint": "^2.9.5",
     "method-override": "~2.0.2",
